tests/mm0_mmu/fail/bad-sort341.mmu
-- bad modifier order
(sort s341 provable free pure)